--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-swiper": "^1.5.13",
-    "react-navigation": "^2.5.5"
+    "react-navigation": "^2.5.5",
+    "react-navigation-material-bottom-tabs": "^0.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
